--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ group = 'org.paasta.caas.api'
 sourceCompatibility = 1.8
 
 jar {
-	baseName = 'paas-ta-caas-api'
+	archivesBaseName = 'paas-ta-caas-api'
 }
 
 repositories {
