--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,8 +3,8 @@ spring:
   application:
       name: CaasApi
   security:
-    username: admin
-    password: openpaasta
+    username:
+    password:
 
 project:
   name: caas-api
@@ -13,7 +13,7 @@ project:
 
 # HTTP Server
 server:
-  port: 3333 #${PORT:2222}   # HTTP (Tomcat) port
+  port: ${PORT:3333}   # HTTP (Tomcat) port
 
 management:     # If you set off security...
   security:
