--- a/build.gradle
+++ b/build.gradle
@@ -38,47 +38,9 @@ dependencies {
     compile "org.springframework.boot:spring-boot-starter-web"
     compile "org.springframework.boot:spring-boot-starter-aop"
     compileOnly "org.projectlombok:lombok:${lombokVersion}"
+    // Apache HttpClient
+    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.6'
+
     testCompile "org.springframework.boot:spring-boot-starter-test"
 }
 
-
-// TODO :: REMOVE AFTER CHECK
-//buildscript {
-//	ext {
-//		springBootVersion = '2.1.0.BUILD-SNAPSHOT'
-//	}
-//	repositories {
-//		mavenCentral()
-//		maven { url "https://repo.spring.io/snapshot" }
-//		maven { url "https://repo.spring.io/milestone" }
-//	}
-//	dependencies {
-//		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-//	}
-//}
-//
-//apply plugin: 'java'
-//apply plugin: 'org.springframework.boot'
-//apply plugin: 'io.spring.dependency-management'
-//
-//group = 'org.paasta.caas.api'
-//sourceCompatibility = 1.8
-//
-//jar {
-//	archivesBaseName = 'paas-ta-caas-api'
-//}
-//
-//repositories {
-//	mavenCentral()
-//	maven { url "https://repo.spring.io/snapshot" }
-//	maven { url "https://repo.spring.io/milestone" }
-//}
-//
-//dependencies {
-//
-//	compile('org.springframework.boot:spring-boot-starter-data-rest')
-//	compile('org.springframework.boot:spring-boot-starter-web')
-//	compile('org.springframework.boot:spring-boot-starter-web-services')
-//	testCompile('org.springframework.boot:spring-boot-starter-test')
-//
-//}
