환경설정 템플릿 저장

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,10 @@ project:
   artifactId: caas-api
   description: caas-api management service
 
+caas:
+  url:
+  testUserToken :
+
 # HTTP Server
 server:
   port: ${PORT:3333}   # HTTP (Tomcat) port
