--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,10 +11,6 @@ project:
   artifactId: caas-api
   description: caas-api management service
 
-caas:
-  url:
-  testUserToken :
-
 # HTTP Server
 server:
   port: ${PORT:3333}   # HTTP (Tomcat) port
@@ -27,6 +23,17 @@ management:     # If you set off security...
 spring:
   profiles: local
 
+kubernetes:
+  adminToken: ADMIN_TOKEN
+  api:
+    endpoint: KUBE_API_ENDPOINT
+
+
 ---
 spring:
   profiles: dev
+
+kubernetes:
+  adminToken: ADMIN_TOKEN
+  api:
+    endpoint: KUBE_API_ENDPOINT
