--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ ext {
     appGroup = 'org.paasta.caas.api'
     springIoPlatformVersion = 'Cairo-SR3'
     apacheHttpClientVersion = '4.5.6'
+    gSonVersion = '2.8.5'
     lombokVersion = '1.18.2'
     jacocoVersion = '0.8.1'
 }
@@ -42,12 +43,9 @@ jar {
 dependencies {
     compile "org.springframework.boot:spring-boot-starter-web"
     compile "org.springframework.boot:spring-boot-starter-aop"
-    compileOnly "org.projectlombok:lombok:${lombokVersion}"
     compile "org.apache.httpcomponents:httpclient:${apacheHttpClientVersion}"
-
-    compile group: 'io.kubernetes', name: 'client-java', version: '2.0.0'
-
-
+    compile "com.google.code.gson:gson:${gSonVersion}"
+    compileOnly "org.projectlombok:lombok:${lombokVersion}"
     testCompile "org.springframework.boot:spring-boot-starter-test"
 }
 
