modify yaml for test case

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -48,6 +48,7 @@ caasMaster:
         allList: "/apis/rbac.authorization.k8s.io/v1/roles"
         list: "/apis/rbac.authorization.k8s.io/v1/namespaces/{namespace}/roles"
         get: "/apis/rbac.authorization.k8s.io/v1/namespaces/{namespace}/roles/{name}"
+        delete: "/apis/rbac.authorization.k8s.io/v1/namespaces/{namespace}/roles/{name}"
       deployment:
         allList: "/apis/apps/v1/deployments"
         list: "/apis/apps/v1/namespaces/{namespace}/deployments"
