CaaS API - Spring Security 적용

--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,9 @@ jar {
 }
 
 dependencies {
+    //Server Security
+    compile ('org.springframework.boot:spring-boot-starter-security')
+
     compile "org.springframework.boot:spring-boot-starter-web"
     compile "org.springframework.boot:spring-boot-starter-aop"
     compile "org.apache.httpcomponents:httpclient:${apacheHttpClientVersion}"
