modify spring security values of application.yml

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -3,8 +3,8 @@ spring:
   application:
     name: caas-api
   security:
-    username:
-    password:
+    username: admin
+    password: PaaS-TA
 
 project:
   name: caas-api
@@ -13,6 +13,7 @@ project:
 
 management:
   security:
+    #Actuator endpoint(health,info..)의 인증여부
     enabled: false
 
 caasMaster:
