테스트 케이스를 위한 Property(yaml) 추가

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -24,6 +24,8 @@ caasMaster:
       services:
         list: "/api/v1/namespaces/{namespace}/services"
         get: "/api/v1/namespaces/{namespace}/services/{name}"
+        create: "/api/v1/namespaces/{namespace}/services"
+        delete: "/api/v1/namespaces/{namespace}/services/{name}"
       endpoints:
         list: "/api/v1/namespaces/{namespace}/endpoints"
         get: "/api/v1/namespaces/{namespace}/endpoints/{name}"
@@ -39,6 +41,9 @@ caasMaster:
       persistentvolumes:
         list: "/api/v1/persistentvolumes"
         get: "/api/v1/persistentvolumes/{name}"
+      persistentVolumeClaims:
+        list: "/api/v1/namespaces/{namespace}/persistentvolumeclaims"
+        get: "/api/v1/namespaces/{namespace}/persistentvolumeclaims/{name}"
       events:
         list: "/api/v1/namespaces/{namespace}/events"
       roles:
@@ -50,6 +55,8 @@ caasMaster:
       deployments:
         list: "/apis/apps/v1/namespaces/{namespace}/deployments"
         get: "/apis/apps/v1/namespaces/{namespace}/deployments/{name}"
+        create: "/apis/apps/v1/namespaces/{namespace}/deployments"
+        delete: "/apis/apps/v1/namespaces/{namespace}/deployments/{name}"
       roleBindings:
         list: "/apis/rbac.authorization.k8s.io/v1/namespaces/{namespace}/rolebindings"
         get: "/apis/rbac.authorization.k8s.io/v1/namespaces/{namespace}/rolebindings/{name}"
@@ -62,10 +69,12 @@ caasMaster:
         delete: "/api/v1/namespaces/{namespace}/serviceaccounts/{name}"
       namespaces:
         get: "/api/v1/namespaces/{namespace}"
+        create: "/api/v1/namespaces"
       resourceQuotas:
         list: "/api/v1/namespaces/{namespace}/resourcequotas"
       secrets:
         get: "/api/v1/namespaces/{namespace}/secrets/{name}"
+        create: "/api/v1/namespaces/{namespace}/secrets"
 
 ---
 spring:
